WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12576
WebKit does not support xlink:show attributes
https://bugs.webkit.org/show_bug.cgi?id=12576
Summary
WebKit does not support xlink:show attributes
Eric Seidel (no email)
Reported
2007-02-04 03:47:53 PST
WebKit does not support xlink:show attributes
http://www.w3.org/TR/xlink/#show-att
Attachments
First attempt
(1.34 KB, patch)
2007-03-12 15:04 PDT
,
Rob Buis
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2007-03-12 15:04:57 PDT
Created
attachment 13602
[details]
First attempt This fixes a small omission in my xlink patch. Let me know if a testcase is needed besides the w3c one, though I am not sure if it can be an automated test... Cheers, Rob.
Darin Adler
Comment 2
2007-03-12 21:11:53 PDT
Comment on
attachment 13602
[details]
First attempt r=me
Rob Buis
Comment 3
2007-03-13 01:15:22 PDT
Landed in
r20140
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug