        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12576
        WebKit does not support xlink:show attributes

        Make an exception for non-empty targets, these should be opened
        in a new window, unless the value is _self.



Canonical link: https://commits.webkit.org/16941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20140 268f45cc-cd09-0410-ab3c-d52691b4dbfc